// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessingIndicator snapshots should match snapshot for classifying phase 1`] = `
<div>
  <div
    class="px-4 py-3 border-2 flex flex-col gap-2 shadow-lg animate-fade-in "
    style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; box-shadow: 4px 4px 0px #1c1917; min-width: 220px;"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-10 h-10 rounded-full flex items-center justify-center relative"
        style="background-color: rgb(28, 25, 23);"
      >
        <span
          data-testid="brain-icon"
        >
          Brain
        </span>
        <div
          class="absolute inset-0 rounded-full border-2 border-t-transparent animate-spin"
          style="border-color: #ffffff30; border-top-color: transparent;"
        />
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="text-sm font-bold uppercase tracking-wide"
          style="color: rgb(28, 25, 23);"
        >
          Processing action
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="h-1.5 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out relative overflow-hidden"
          style="width: 20%; background-color: rgb(22, 101, 52);"
        >
          <div
            class="absolute inset-0 animate-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="flex justify-between px-1"
    >
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 scale-125"
        style="background-color: rgb(28, 25, 23);"
      />
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 "
        style="background-color: rgb(214, 211, 209);"
      />
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 "
        style="background-color: rgb(214, 211, 209);"
      />
    </div>
  </div>
</div>
`;

exports[`ProcessingIndicator snapshots should match snapshot for generating phase 1`] = `
<div>
  <div
    class="px-4 py-3 border-2 flex flex-col gap-2 shadow-lg animate-fade-in "
    style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; box-shadow: 4px 4px 0px #1c1917; min-width: 220px;"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-10 h-10 rounded-full flex items-center justify-center relative"
        style="background-color: rgb(28, 25, 23);"
      >
        <span
          data-testid="book-icon"
        >
          Book
        </span>
        <div
          class="absolute inset-0 rounded-full border-2 border-t-transparent animate-spin"
          style="border-color: #ffffff30; border-top-color: transparent;"
        />
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="text-sm font-bold uppercase tracking-wide"
          style="color: rgb(28, 25, 23);"
        >
          Generating response
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="h-1.5 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out relative overflow-hidden"
          style="width: 60%; background-color: rgb(22, 101, 52);"
        >
          <div
            class="absolute inset-0 animate-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="flex justify-between px-1"
    >
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 "
        style="background-color: rgb(22, 101, 52);"
      />
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 scale-125"
        style="background-color: rgb(28, 25, 23);"
      />
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 "
        style="background-color: rgb(214, 211, 209);"
      />
    </div>
  </div>
</div>
`;

exports[`ProcessingIndicator snapshots should match snapshot for updating phase 1`] = `
<div>
  <div
    class="px-4 py-3 border-2 flex flex-col gap-2 shadow-lg animate-fade-in "
    style="background-color: rgb(255, 255, 255); border-color: #d6d3d1; box-shadow: 4px 4px 0px #1c1917; min-width: 220px;"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-10 h-10 rounded-full flex items-center justify-center relative"
        style="background-color: rgb(28, 25, 23);"
      >
        <span
          data-testid="sparkles-icon"
        >
          Sparkles
        </span>
        <div
          class="absolute inset-0 rounded-full border-2 border-t-transparent animate-spin"
          style="border-color: #ffffff30; border-top-color: transparent;"
        />
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <div
          class="text-sm font-bold uppercase tracking-wide"
          style="color: rgb(28, 25, 23);"
        >
          Updating world
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="h-1.5 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out relative overflow-hidden"
          style="width: 90%; background-color: rgb(22, 101, 52);"
        >
          <div
            class="absolute inset-0 animate-shimmer"
          />
        </div>
      </div>
    </div>
    <div
      class="flex justify-between px-1"
    >
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 "
        style="background-color: rgb(22, 101, 52);"
      />
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 "
        style="background-color: rgb(22, 101, 52);"
      />
      <div
        class="w-2 h-2 rounded-full transition-all duration-300 scale-125"
        style="background-color: rgb(28, 25, 23);"
      />
    </div>
  </div>
</div>
`;
